style: establish project color palette

--- a/0-1/assignments/week-0/css/styles.css
+++ b/0-1/assignments/week-0/css/styles.css
@@ -5,3 +5,11 @@
 *::before {
 	box-sizing: border-box;
 }
+
+/* ----- Color Palette ----- */
+
+:root {
+	--color-primary: #387ed1;
+	--color-body: #424242;
+	--color-body-lighter: #666;
+}
