--- a/0-1/assignments/week-0/css/styles.css
+++ b/0-1/assignments/week-0/css/styles.css
@@ -13,3 +13,57 @@
 	--color-body: #424242;
 	--color-body-lighter: #666;
 }
+
+/* ----- Typography ----- */
+
+html {
+	/* 62.5% of 16px = 10px */
+	font-size: 62.5%;
+}
+
+body {
+	color: var(--color-body);
+	font-family: Inter, Arial, Helvetica, sans-serif;
+	font-size: 2rem;
+	line-height: 1.5;
+}
+
+h1,
+h2,
+h3 {
+	color: var(--color-body);
+	font-weight: 400;
+	margin-bottom: 1rem;
+}
+
+h1 {
+	font-size: 4rem;
+}
+
+h2 {
+	font-size: 3.2rem;
+}
+
+h3 {
+	font-size: 2.4rem;
+	line-height: 1.3;
+}
+
+@media screen and (min-width: 1024px) {
+	/* For Laptops and Desktops */
+	body {
+		font-size: 1.8rem;
+	}
+
+	h1 {
+		font-size: 4.5rem;
+	}
+
+	h2 {
+		font-size: 3.6rem;
+	}
+
+	h3 {
+		font-size: 2.8rem;
+	}
+}
