style: add container for max-width 1140px

--- a/0-1/assignments/week-0/css/styles.css
+++ b/0-1/assignments/week-0/css/styles.css
@@ -149,3 +149,11 @@ a {
 	}
 }
 
+/* ----- Container ----- */
+
+.container {
+	/* This continer is important to keep all content under 1140px.  */
+	max-width: 1140px;
+	margin: 0 auto;
+	padding: 0 2rem;
+}
