--- a/0-1/assignments/week-0/css/styles.css
+++ b/0-1/assignments/week-0/css/styles.css
@@ -231,3 +231,250 @@ a {
 		width: 22px;
 	}
 }
+
+/* ----- Dropdown Menu ----- */
+
+.dropdown {
+	display: flex;
+	color: var(--color-body-lighter);
+	justify-content: center;
+	left: 0;
+	margin: 0 auto;
+	max-width: 1140px;
+	padding: 0 1rem;
+	position: absolute;
+	right: 0;
+	top: 1rem;
+	width: 100%;
+}
+
+.dropdown-menu {
+	background: #fff;
+	box-shadow: 0 50px 100px -20px rgba(50, 50, 93, 0.25),
+		0 30px 60px -30px rgba(0, 0, 0, 0.3),
+		0 -18px 60px -10px rgba(0, 0, 0, 0.025);
+	display: flex;
+	flex-direction: column;
+	opacity: 0;
+	padding: 1rem 0;
+	transition: all 0.15s ease-in-out;
+	width: 100%;
+	width: 100%;
+}
+
+.dropdown-menu.active {
+	opacity: 1;
+}
+
+.dropdown .icon {
+	align-self: flex-end;
+	padding: 3px;
+	margin-right: 8px;
+	position: relative;
+}
+
+.dropdown__links {
+	list-style: none;
+	margin-top: -6rem;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 0 2rem;
+	font-size: 1.5rem;
+}
+
+.dropdown a {
+	color: var(--color-body-lighter);
+	transition: color 0.3s ease-out;
+}
+
+.dropdown a:hover {
+	color: var(--color-primary);
+}
+
+.dropdown__links li {
+	flex: 0 0 50%; /* flex-basis: 50% of avaiable space */
+	padding: 1rem;
+}
+
+.dropdown__links a {
+	color: var(--color-body-lighter);
+	font-weight: 500;
+}
+
+.dropdown__products {
+	border-top: 1px solid rgba(204, 204, 204, 0.5);
+	border-bottom: 1px solid rgba(204, 204, 204, 0.5);
+	padding: 2rem;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.dropdown__products div {
+	display: flex;
+	flex-basis: 50%; /* flex-basis: 50% of avaiable space */
+	padding: 1rem 0.5rem;
+	align-items: center;
+}
+
+.dropdown__products img {
+	width: 30px;
+}
+
+.dropdown__products .education-mobile img {
+	width: 18px;
+	margin: 5px;
+}
+
+.dropdown__products a {
+	color: var(--color-body);
+	font-weight: 500;
+	font-size: 1.6rem;
+	padding-left: 0.5rem;
+}
+
+.dropdown__products p {
+	display: none;
+}
+
+.dropdown__footer {
+	display: flex;
+	flex-direction: column;
+	padding: 1rem 2rem 0;
+}
+
+.dropdown__footer > div {
+	flex-basis: 50%;
+}
+
+.dropdown__footer h3 {
+	font-size: 1.7rem;
+	font-weight: 500;
+}
+
+.dropdown__footer-list {
+	display: flex;
+}
+
+.dropdown__footer-list > div {
+	flex-basis: 50%;
+	padding-left: 1rem;
+}
+
+.dropdown__footer-list ul {
+	list-style: none;
+	padding-left: 0;
+	font-size: 1.4rem;
+	line-height: 2;
+}
+
+.dropdown__footer-education {
+	display: none;
+}
+
+@media screen and (min-width: 768px) {
+	/* For Tablets and Wider Screens */
+	.dropdown {
+		justify-content: flex-end;
+		top: 6.4rem;
+	}
+
+	.dropdown-menu {
+		box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
+		margin-right: 1rem;
+		padding-bottom: 0;
+		width: 700px;
+	}
+
+	.dropdown .icon {
+		display: none;
+	}
+
+	.dropdown__links {
+		display: none;
+	}
+
+	.dropdown__products {
+		border-top: 0;
+		border-bottom: 0;
+		flex-wrap: nowrap;
+		justify-content: space-between;
+		margin: 0 2.5rem;
+		padding: 0rem;
+	}
+
+	.dropdown__products img {
+		width: 50px;
+	}
+
+	.dropdown__products a {
+		font-size: 1.5rem;
+		padding: 1rem 0 0;
+	}
+
+	.dropdown__products p {
+		color: #9b9b9b;
+		display: block;
+		font-size: 1.3rem;
+		margin-top: 5px;
+	}
+
+	.dropdown__products div {
+		display: flex;
+		flex-basis: initial;
+		flex-direction: column;
+		justify-content: flex-end;
+	}
+
+	.dropdown__products .education-mobile {
+		display: none;
+	}
+
+	.dropdown__footer {
+		background: #fafafb;
+		flex-direction: row;
+		padding: 2rem 3rem;
+	}
+
+	.dropdown__footer-list {
+		display: flex;
+	}
+
+	.dropdown__footer-list > div {
+		padding-left: 0;
+	}
+
+	.dropdown__footer-list div:last-child {
+		padding-left: 3.5rem;
+	}
+
+	.dropdown__footer-education {
+		display: flex;
+		flex-direction: column;
+		padding: 0 6rem;
+		row-gap: 1rem;
+	}
+
+	.dropdown__footer-education__content {
+		/* align-items: flex-end; */
+		column-gap: 4rem;
+		display: flex;
+		flex-basis: auto;
+	}
+
+	.dropdown__footer-education__content a {
+		color: var(--color-body-lighter);
+		display: block;
+		font-size: 1.5rem;
+	}
+
+	.dropdown__footer-education img {
+		display: block;
+		margin: 0 auto 2rem;
+		width: 30px;
+	}
+
+	.dropdown__footer .trading {
+		margin: 2px auto 21px;
+		width: 38px;
+	}
+}
