style: formate using prettier

--- a/components/hero.html
+++ b/components/hero.html
@@ -1,20 +1,22 @@
 <section class="hero">
-	<div class="container">
-		<picture>
-			<source
-				type="image/webp"
-				srcset="./images/landing.webp 1x, ./images/landing@2x.webp 2x"
-			/>
-			<source
-				type="image/png"
-				srcset="./images/landing.png 1x, ./images/landing@2x.png 2x"
-			/>
-			<img class="hero__image" src="./images/landing.png" alt="" />
-		</picture>
-		<header class="hero__header">
-			<h1 class="hero__heading">Heading Goes Here</h1>
-			<p class="hero__content">Tagline goes here which gives idea about brand</p>
-			<a href="#" class="btn">Call To Action</a>
-		</header>
-	</div>
+  <div class="container">
+    <picture>
+      <source
+        type="image/webp"
+        srcset="./images/landing.webp 1x, ./images/landing@2x.webp 2x"
+      />
+      <source
+        type="image/png"
+        srcset="./images/landing.png 1x, ./images/landing@2x.png 2x"
+      />
+      <img class="hero__image" src="./images/landing.png" alt="" />
+    </picture>
+    <header class="hero__header">
+      <h1 class="hero__heading">Heading Goes Here</h1>
+      <p class="hero__content">
+        Tagline goes here which gives idea about brand
+      </p>
+      <a href="#" class="btn">Call To Action</a>
+    </header>
+  </div>
 </section>
