--- a/components/grids.html
+++ b/components/grids.html
@@ -6,10 +6,15 @@
       b) grid--1x2
 -->
 
-
 <!-- Two Column Grid -->
 <div class="grid grid--1x2">
-  <div style="height: 100px; text-align: center; background: gold;">Content Box1</div>
-	<div style="height: 100px; text-align: center; background: dodgerblue;">Content Box2</div>
-	<div style="height: 100px; text-align: center; background: lightpink;">Content Box3</div>
+  <div style="height: 100px; text-align: center; background: gold">
+    Content Box1
+  </div>
+  <div style="height: 100px; text-align: center; background: dodgerblue">
+    Content Box2
+  </div>
+  <div style="height: 100px; text-align: center; background: lightpink">
+    Content Box3
+  </div>
 </div>
